# Kedro_project

./: README.md  pyproject.toml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
src/financial_predictions/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/financial_predictions/pipelines/data_processing/: nodes.py  pipeline.py
src/financial_predictions/pipelines/eda/: nodes.py  pipeline.py
src/financial_predictions/pipelines/evaluation/: nodes.py  pipeline.py
src/financial_predictions/pipelines/feature_engineering/: nodes.py  nodes_utils.py  pipeline.py
src/financial_predictions/pipelines/model_training/: nodes.py  pipeline.py
tests/: example_test.py
